# mnist-docker

./: README.md  pyproject.toml
mnist/: __main__.py
mnist/configs/: train_settings.py
