[project]
name = "mnist-docker"
version = "0.1.0"
description = ""
authors = [
    {name = "hajime7227",email = "ser.hjm95272@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch (>=2.6.0,<3.0.0)",
    "torchvision (>=0.21.0,<0.22.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
